fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,95 +1,99 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Fira+Code:wght@300..700&family=Inter:opsz,wght@14..32,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Fira+Code:wght@300..700&family=Inter:opsz,wght@14..32,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-@import "tailwindcss";
+@import 'tailwindcss';
 
 .anton-regular {
-	font-family: "Anton", sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	font-size: 1.75rem; /* 28px */
-	line-height: 2rem; /* 32px */
-	letter-spacing: 0.05em;
+    font-family: 'Anton', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.75rem; /* 28px */
+    line-height: 2rem; /* 32px */
+    letter-spacing: 0.05em;
 }
 
 html {
-	font-family: "Anton", sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	font-size: 16px; /* Base font size */
-	line-height: 1.5;
-	color: white;
+    font-family: 'Anton', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px; /* Base font size */
+    line-height: 1.5;
+    color: white;
 }
 
 @font-face {
-	font-family: "Gilroy";
-	src: url("./assets/fonts/Gilroy-Regular.ttf") format("truetype");
-	font-weight: 400;
-	font-style: normal;
+    font-family: 'Gilroy';
+    src: url('./assets/fonts/Gilroy-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
 }
 
 @font-face {
-	font-family: "Norwester";
-	src: url("./assets/fonts/norwester.ttf") format("truetype");
-	font-weight: 400;
-	font-style: normal;
+    font-family: 'Norwester';
+    src: url('./assets/fonts/norwester.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
 }
 
 .gilroy {
-	font-family: "Gilroy", sans-serif;
-	font-size: 16px; /* 16px */
-	line-height: 1.5;
-	font-weight: 00;
+    font-family: 'Gilroy', sans-serif;
+    font-size: 16px; /* 16px */
+    line-height: 1.5;
+    font-weight: 00;
 }
 
 .norwester {
-	font-family: "Norwester", sans-serif;
-	font-size: 1.125rem; /* 18px */
-	line-height: 1.6;
+    font-family: 'Norwester', sans-serif;
+    font-size: 1.125rem; /* 18px */
+    line-height: 1.6;
 }
 
 body {
-	width: 100vw;
-	height: 100vh;
-	margin: 0;
-	background: #0d0d0d;
-	overflow: hidden;
-	font-size: 1rem; /* Default body font size */
-	line-height: 1.5;
-	font-weight: 300;
-	color: white;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    /* background: #0d0d0d; */
+    font-size: 1rem; /* Default body font size */
+    line-height: 1.5;
+    font-weight: 300;
+    color: white;
+}
+
+html,
+body {
+    overflow-x: hidden;
 }
 
 /* Additional utility classes for font weights */
 .font-light {
-	font-weight: 300;
+    font-weight: 300;
 }
 
 .font-regular {
-	font-weight: 400;
+    font-weight: 400;
 }
 
 .font-medium {
-	font-weight: 500;
+    font-weight: 500;
 }
 
 .font-bold {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .h1 {
-	font-size: 16px; /* 36px */
-	font-weight: 200;
-	color: "#333333";
+    font-size: 19px; /* 36px */
+    font-weight: 200;
+    color: '#0d0d0d';
 }
 
 .h2 {
-	font-size: 1.875rem; /* 30px */
-	line-height: 2.25rem; /* 36px */
-	font-weight: 600;
+    font-size: 1.875rem; /* 30px */
+    line-height: 2.25rem; /* 36px */
+    font-weight: 600;
 }
 
 .h3 {
-	font-size: 1.5rem; /* 24px */
-	line-height: 2rem; /* 32px */
-	font-weight: 500;
+    font-size: 1.5rem; /* 24px */
+    line-height: 2rem; /* 32px */
+    font-weight: 500;
 }
